--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,3 +23,7 @@ jobs:
             target: gh-pages
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        - name: Deploy GitHub Pages site
+          uses: actions/deploy-pages@v4.0.5
+        
