--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,10 @@ project:
   type: website
 
 website:
-  title: "vivian"
+  title: "Vivian"
   navbar:
     right:
       - about.qmd
-      - icon: github
-        href: https://github.com/
 format:
   html:
     theme: cosmo
