--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,8 @@ website:
   navbar:
     right:
       - about.qmd
+      - icon: github
+        href: https://github.com/Vivianapika/Vivianapika.github.io
 format:
   html:
     theme: cosmo
